--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:paddingTop="35dp"
         android:paddingBottom="60dp"
-        tools:context=".views.LoginFragment">
+        tools:context=".views.auth.LoginFragment">
 
         <TextView
             android:layout_width="wrap_content"
