--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:paddingTop="35dp"
         android:paddingBottom="60dp"
-        tools:context=".views.RegisterFragment">
+        tools:context=".views.auth.RegisterFragment">
 
         <TextView
             android:layout_width="wrap_content"
