--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".views.SplashFragment">
+    tools:context=".views.auth.SplashFragment">
 
     <ImageView
         android:layout_width="120dp"
